--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,18 @@
 audio(src='/audio/David Guetta - Without You ft. Usher.mp3')
 
+#withoutyou_hype_container(style='position: relative; overflow: hidden; width: 1000px; height: 540px; margin:auto;margin-top:50px;')
+  script(type='text/javascript', charset='utf-8', src='WithoutYou_Resources/withoutyou_hype_generated_script.js?262')
+
 .audioStatus
 
 .audioControls
   ul.audioControlMenu
-    li.audioControlItem.play Play
-    li.audioControlItem.pause Pause
-    li.audioControlItem.stop Stop
+    li.audioControlItem
+      a(href="http://tumultco.com/hype/") Built with Hype
+    //li.audioControlItem.play Play
+    //li.audioControlItem.pause Pause
+    //li.audioControlItem.stop Stop
 
-script(src='/javascripts/fabricjs/all.min.js')
+//-script(src='/javascripts/fabricjs/all.min.js')
 script(src='/javascripts/app.js')
+
