--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@
 html(lang='en')
   head
     meta(charset='utf-8')
-    title Audio | HTML5 Tests
-    meta(name='description', content='Testing HTML Audio by Miles Matthias')
+    title Without You
+    meta(name='description', content='Testing HTML Audio and Canvas Animation with Hype by Miles Matthias')
     meta(name='author', content='Miles Matthias')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(href='/stylesheets/style.css', rel='stylesheet')
